--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "redux-saga": "^1.2.3",
     "styled-components": "^5.3.10",
     "styled-normalize": "^8.0.7",
